--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
   },
   "homepage": "https://github.com/jurgenizer/node-vidly#readme",
   "dependencies": {
+    "config": "^3.3.12",
+    "debug": "^4.3.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "joi": "^17.13.3"
+    "helmet": "^7.1.0",
+    "joi": "^17.13.3",
+    "morgan": "^1.10.0"
   }
 }
