--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "config": "^3.3.12",
     "debug": "^4.3.7",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "helmet": "^7.1.0",
+    "express": "^4.21.1",
+    "helmet": "^8.0.0",
     "joi": "^17.13.3",
+    "mongoose": "^8.7.1",
     "morgan": "^1.10.0"
   }
 }
