--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
+    "joi-objectid": "^4.0.2",
     "mongoose": "^8.7.1",
     "morgan": "^1.10.0"
   }
