--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
     "joi-objectid": "^4.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.7.1",
     "morgan": "^1.10.0"
   }
