--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/jurgenizer/node-vidly#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "config": "^3.3.12",
     "debug": "^4.3.7",
     "dotenv": "^16.4.5",
