--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "debug": "^4.3.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-async-errors": "^3.1.1",
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
     "joi-objectid": "^4.0.2",
